# datafog-python

./: .bumpversion.cfg  .codecov.yml  .coverage.Sids-MacBook-Pro.local.33770.XNkDsmAx  .coveragerc  .env  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  AGENTS.md  BETA_CHANGELOG.md  CHANGELOG.MD  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  LICENSE  LICENSE.MD  MANIFEST.in  README.MD  README.md  ROADMAP.md  SECURITY.md  coverage.xml  deploy.sh  env.example  error_log.txt  justfile  package-lock.json  pyproject.toml  requirements-benchmark.txt  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.py  setup_lean.py  setup_original.py  (+2 more)
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  beta-release.yml  ci.yml  dev-cicd-tests.yml  dev-cicd.yml  feature-ci-cd.yml  feature-cicd.yml  lint.yml  main-cicd-tests.yml  main-cicd.yml  nightly-release.yml  pre-commit-auto-fix.yml  publish-pypi.yml  py-version-cicd.yml  py310-feature-cicd.yml  py312-feature-cicd.yml  release.yml  tests.yml  weekly-release.yml  wheel_size.yml
benchmarks/: README.md  _suites.py  _timing.py  requirements.txt  run.py
benchmarks/payloads/: chat_request_clean.json  chat_request_pii.json  core_100kb_sparse.txt  core_10kb_mixed.txt  core_1kb_dense.txt  hook_pretooluse.json  manifest.json
datafog/: __about__.py  __init__.py  __init___lean.py  __init___original.py  agent.py  client.py  config.py  core.py  datafog.py  engine.py  exceptions.py  main.py  main_lean.py  main_original.py  models.py  pii_annotation.py  pyspark_udfs.py  recognizers.py  telemetry.py
datafog/integrations/: __init__.py  claude_code.py  litellm_guardrail.py  sentry.py
datafog/models/: __init__.py  anonymizer.py  policy.py  recognizers.py  results.py  spacy_nlp.py
datafog/notes/: v4.0.1-tickets.md
datafog/processing/: __init__.py
datafog/services/: __init__.py  image_service.py  spark_service.py  text_service.py  text_service_lean.py  text_service_original.py
datafog/telemetry/: __init__.py  open_telemetry.py
docs/: cla-administration.md  cla-policy.md  cli.rst  conf.py  contributing.rst  definitions.rst  getting-started.rst  important-concepts.rst  index.rst  live-module-map.rst  optional-surfaces.rst  planning-history.rst  python-sdk.rst  roadmap.rst  v44-bridge-release.rst  v45-release-readiness.rst  v5-compatibility-matrix.rst  v5-cut-line.rst  v5-model-requirements.md  v5-policy-presets.rst  v5-product-brief.rst  v5-rc1-api-contract.rst
docs/agents/: domain.md  issue-tracker.md
docs/audit/: 00-reconnaissance.md  (+10 more)
examples/: __init__.py  datafog_python_v3_examples.ipynb  datafog_v3_model_evals.ipynb  getting-started.ipynb  getting_started.ipynb  image_processing.ipynb  quick_start.ipynb  sample.csv  scan_output.json  syndata.py  synthetic_output.csv  test.py  text_annotation_example.ipynb  uploading-file-types.ipynb
notes/: ROADMAP.md  epic-1.1-prd.md  gliner_accuracy_analysis.md  gliner_architecture_design.md  gliner_competitive_analysis.md  gliner_context.md  gliner_pipeline_implementation_guide.md  gliner_research_instructions.md  gliner_research_report.md  gliner_research_summary.md  story-1.2-tkt.md  story-1.3-tkt.md  story-1.4-tkt.md  story-1.5-tkt.md  story-1.6-tkt.md  story-1.7-tkt.md  story-1.8-tkt.md  v4.1.0-tickets.md  v4.2.0-tickets.md
scripts/: bench_cli.sh  bench_sdk.py  benchmark_analysis_report.md  check_wheel_size.py  compare_benchmarks.py  fair_benchmark.py  fixed_text_service.py  generate_changelog.py  generate_social_preview.py  gliner_final_analysis.py  gliner_research.py  gliner_research_simple.py  run_benchmark_locally.sh  sample_otel_log.json  weekly_metrics.py
src/: test.ipynb  test.py
templates/: release_announcement.md  social_media_templates.md
tests/: benchmark_text_service.py  beta_pypi_test.ipynb  debug_spacy_entities.py  image_set.json  regex_issue.py  simple_performance_test.py  test.db  test_a.py  test_agent_api.py  test_allowlist.py  test_anonymizer.py  test_claude_code_hook.py  test_cli_json_contract.py  test_cli_smoke.py  test_client.py  test_datafog.py  test_de_pii_regex.py  test_detection_accuracy.py  test_donut_lazy_import.py  test_donuttransformer.py  test_engine_api.py  test_gliner_annotator.py  test_image_service.py  test_install_profiles.py  test_litellm_guardrail.py  test_main.py  test_no_network_core.py  test_numeric_precision.py  test_ocr_integration.py  test_policy_api.py  test_presidio.py  test_recognizer_registry.py  test_regex_annotator.py  test_runtime_dependency_safety.py  test_sentry_integration.py  test_spacy_nlp.py  test_spark_integration.py  test_spark_service.py  test_telemetry.py  test_text_service.py  (+4 more)
(+75 files in other folders)
